# pysss

./: README.md  setup.cfg
.github/workflows/: python-app.yml  python-publish.yml
src/pysss/: __init__.py  pysss.py
tests/: run_tests.py  splitter.py
