[metadata]
name = pysss
version = attr: pysss.__version__
author = Mohamed A. Bamakhrama
author_email = mohamed@alumni.tum.de
description = Shamir's secret sharing algorithm in Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/mohamed/pysss
project_urls =
    Bug Tracker = https://github.com/mohamed/pysss/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
